--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -11,7 +11,7 @@ body{
     height: 100vh;
 }
 
-#app-title{
+#page-title{
     font-size: 20px;
     padding: 14px 16px;
     margin-right: auto;
@@ -59,7 +59,7 @@ li a:hover{
     background-color: #3f3e3e;
 }
 
-#app-title:hover{
+#page-title a:hover{
     background-color: #3f3e3e;
 }
 main{
