--- a/WEB/css/cards.css
+++ b/WEB/css/cards.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -18,17 +19,32 @@ main{
     margin: 3em 2em;
     padding: 3em;
     align-items: center;
-    background-color: rgb(223, 217, 131);
+    background-image: radial-gradient( rgb(241, 241, 126), rgb(186, 187, 115));
     border: 3px, black, dashed;
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
-    width: 500px;
+    width: 30vw;
     transition: width 2s;
 }
 
+@media only screen and (max-width: 1200px){
+    .card{
+        flex-direction: column;
+        width: 50vw;
+    }
+    
+    .card:hover{
+        width: 55vw;
+    }
+
+    main{
+        flex-direction: column;
+    }
+}
+
 .card:hover{
-    width: 650px;
+    width: 35vw;
     background-color: rgb(238, 232, 149);
     box-shadow: 10px 10px 10px rgb(175, 170, 99);
 
@@ -60,4 +76,41 @@ img{
 .buy-btn:hover{
     background-color: #25ad79;
     cursor:pointer
+}
+
+#page-title{
+    font-size: 20px;
+    padding: 14px 16px;
+    margin-right: auto;
+    float: left;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+}
+nav{
+    top: 0px;
+    position: sticky;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #333;
+}
+
+li {
+    list-style-type: none;
+    float: right;
+}
+
+li a {
+    background-color: #333;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover{
+    background-color: #3f3e3e;
 }
