--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -1,96 +1,179 @@
-* {
-    background-color: antiquewhite;
-    padding: 0px;
+*{
     margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    color:black;
-    box-sizing: border-box;
 }
+
 body{
-    height: 100vh;
+    background-color: antiquewhite;
 }
 
-#page-title{
-    font-size: 20px;
-    padding: 14px 16px;
-    margin-right: auto;
-    float: left;
-    background-color: #333;
-    color: white;
-    text-decoration: none;
-}
-
+/* Header */
 header{
-    top: 0px;
+    z-index: 1;
     position: sticky;
-    width: 100%;
+    top: 0;
     display: flex;
+}
+
+.page-title{
+    align-items: center;
+    display: flex;
+    font-size: 2em;
+    padding: 14px 16px;
+    background-color: #333;
+    font-family: "Open Sans", sans-serif;
+    color: white;
+}
+
+.page-icon{
+    padding-left: 10px;
+}
+
+/* Navigation */
+
+.navbar{
+    width: 100%;
+    display: inline-flex;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     background-color: #333;
 }
 
-footer{
-    width: 100%;
-    display: inline-block;
-    background-color: #333;
-    padding: 1em 0;
-    bottom: 0;
-    color: white;
-    text-align: center;
+.navbar ul{
+    display: flex;
+    flex-direction: row;
 }
 
-li {
+.navbar li {
     list-style-type: none;
-    float: right;
 }
 
-li a {
+.nav-element {
     background-color: #333;
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding: 22px 16px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.30em;
+    transition: background-color 0.3s;
 }
 
-li a:hover{
+.nav-element:hover{
     background-color: #3f3e3e;
 }
 
+.dropdown{
+    display: inline-block;
+    position: relative;
+}
+
+.dropdown-content{
+    z-index: -1;
+    right: 0;
+    display: none;
+    position: absolute;
+    background-color: #504d4d;
+    min-width: 160px;
+}
+
+.dropdown-content a {
+    transition: background-color 0.3s;
+    border-bottom: 2px rgb(36, 36, 36) solid;
+    color: white;
+    padding: 1em 1.4em;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #646464;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+    animation: dropdown-slide 0.5s;
+}
+
+@keyframes dropdown-slide{
+    0% {transform: translateY(-100%);}
+    100% {transform: translateY(0);}
+}
+
+#hamburger{
+    height: 100%;
+    background-color: #333;
+    display: none;
+    color: white;
+    text-align: center;
+    padding: 15px 25px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 2em;
+    transition: background-color 0.3s;
+    border: none;
+}
+
+#hamburger:hover{
+    background-color: #3f3e3e;
+}
+
+.hamburger .dropdown-content{
+    width: 100vw;
+}
+
+.hamburger .dropdown-content a{
+    font-size: 1.5em;
+    padding: 0.4em 1em;
+}
+
+
+@media screen and (max-width: 550px) {
+    #hamburger {
+      display: block;
+    }
+    .nav-element{
+        display: none;
+    }
+  }
+
+/* Page content */
+
 main{
+    min-height: 100vh;
     width: 100%;
     display: flex;
-    margin: 0px 200px;
     align-items: center;
     flex-direction: column;
 }
 
-h1{
-    padding: 20px 10px;
+.title-1{
+    font-size: 3em;
+    margin: 0.5em 0 0 0;
 }
 
-.content{
-    margin-top: 40px;
+.title-2{
+    font-size: 2em;
+    margin: 0.5em 0 0 0;
+}
+
+.text-box-1{
+    width: 70vw;
+    margin-top: 2em;
     text-align: center;
     padding: 20px 20px;
     background-color: #2c2b2b;
     color: white;
 }
 
-.title{
-    margin-top: 10px;
+.image-box{
+    margin-top: 5em;
 }
+/* Side-bar content */
 
-#page-content{
-    height: 100%;
-    display: flex;
-    justify-content:  space-between;
-}
-
-aside{
-    border: #c23838;
+.side-bar{
     border-width: 5px;
     background-color: #524e4e;
     flex-direction: column;
@@ -98,16 +181,30 @@ aside{
     display: flex;
 }
 
-.side-content{
+.side-title{
     padding: 1em;
     color: white;
     background-color: #524e4e
 }
 
-aside a:hover{
+.side-element{
+    padding: 1em;
+    color: white;
+}
+
+.side-element:hover{
     background-color: #6b6767
 }
 
-img{
-    margin-top: 50px;
+/* footer */
+
+footer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    padding: 1em 0;
+    bottom: 0;
+    color: white;
+    font-family: "Open Sans", sans-serif;
 }
