--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -187,16 +187,23 @@ main{
     margin: 0.5em 0 0 0;
 }
 
-.text-box-1{
+.more-info{
+    background: #b3a4a43b;
+    font-size: 1.3em;
+    padding: 0.4em;
+}
+
+.box-1{
     width: 70vw;
-    margin-top: 2em;
+    margin: 2em 1em 0em 1em;
     padding: 20px 20px;
     background-color: #2c2b2b;
     color: white;
 }
 
 .image-box{
-    margin-top: 5em;
+    margin: 5em 0;
+    height: auto;
 }
 @media screen and (max-width: 1000px) {
     .title-1{
@@ -204,6 +211,13 @@ main{
     }
     .title-2{
         font-size: 1.5em;
+    }
+    .text-box-1{
+        font-size: 0.8em;
+    }
+    .image-box{
+        width: 150px;
+
     }
 }
 
