--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -11,6 +11,11 @@ body{
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%2359b1bb' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
+.body-darkmode{
+    background-color: #5e5e5e;
+    color: white;
+}
+
 /* Header */
 header{
     z-index: 1;
@@ -260,3 +265,80 @@ footer{
     color: white;
     font-family: "Open Sans", sans-serif;
 }
+
+/* Toggle switch */
+
+.toggle-switch{
+    float: right;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #333;
+}
+.moon-ico{
+    color: rgb(255, 255, 255);
+    scale: 1.5;
+}
+
+.switch {
+    margin: 0 2em 0 1em;
+    position: relative;
+    display: block;
+    background-color: #333;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #e0eb99;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: rgb(136, 128, 128);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #ccc;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #ccc;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
