--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -199,8 +199,9 @@ main{
 }
 
 .box-1{
+    overflow: hidden;
     width: 70vw;
-    margin: 2em 1em 0em 1em;
+    margin: 2em 1em 2em 1em;
     padding: 20px 20px;
     background-color: #2c2b2b;
     color: white;
@@ -210,21 +211,7 @@ main{
     margin: 5em 0;
     height: auto;
 }
-@media screen and (max-width: 1000px) {
-    .title-1{
-        font-size: 2em;
-    }
-    .title-2{
-        font-size: 1.5em;
-    }
-    .text-box-1{
-        font-size: 0.8em;
-    }
-    .image-box{
-        width: 150px;
 
-    }
-}
 
 /* Side-bar content */
 
@@ -278,6 +265,10 @@ footer{
 .moon-ico{
     color: rgb(255, 255, 255);
     scale: 1.5;
+}
+
+.fa-book{
+    margin-left: 10px;
 }
 
 .switch {
@@ -342,3 +333,54 @@ footer{
   .slider.round:before {
     border-radius: 50%;
   }
+
+/* Docummentation */
+
+.doc-link{
+    margin-top: 1em;
+}
+
+.doc-link a{
+    color: rgb(159, 153, 153);
+}
+
+.doc-link a:hover{
+    color: rgb(192, 118, 118);
+}
+
+.box-split{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-split img{
+    padding: 1em;
+    max-width: 150px;
+    height: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    .box-split{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .page-title{
+        font-size: 1.5em;
+    }
+
+    .title-1{
+        font-size: 2em;
+    }
+    .title-2{
+        font-size: 1.5em;
+    }
+    .text-box-1{
+        font-size: 0.8em;
+    }
+    .image-box{
+        width: 150px;
+
+    }
+}
